Fixed left overflow on mobile devices when displaying image questions

--- a/viisi/scss/mobile.scss
+++ b/viisi/scss/mobile.scss
@@ -149,4 +149,10 @@
   .distribution .meta .actions {
     width: 40%;
   }
+  .image-answer {
+    display: block !important;
+  }
+  .image-answer-parent {
+    margin-left: unset !important;
+  }
 }
